target/fabric8/template-workdir/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    discovery.3scale.net/path: /rest
    discovery.3scale.net/discovery-version: v1
    discovery.3scale.net/scheme: http
    discovery.3scale.net/port: "8080"
    fabric8.io/git-commit: d2b0162fcbc7b14c5d0445e87d2966f072193783
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    discovery.3scale.net: "true"
    app: rest-clean
    provider: fabric8
    version: 1.0.1
    group: com.test.app
  name: rest-clean
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rest-clean
    provider: fabric8
    group: com.test.app
