target/fabric8/template-workdir/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: rest-clean
    provider: fabric8
    version: 1.0.1
    group: com.test.app
  name: rest-clean
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rest-clean
